# DMA-PRIME-dashboard

./: .gitignore  README.md  environment.yml  freeze-requirements.txt  icon-pack-0.tps  list-requirements.txt  requirements.txt  run.py
dvtDashboard/: pyproject copy.toml  pyproject.toml
dvtDashboard/dma_prime_vis_toolkit/: KG_recommendation.py  __init__.py  admin.py  ai-prompt.py  ai_prompt.py  authenticate.py  config.py  data_handling.py  database.py  maternal_child_dataHander.py  utility.py
dvtDashboard/dma_prime_vis_toolkit/static/assets/: kg_test_covid.pkl
dvtDashboard/dma_prime_vis_toolkit/static/css/: style.css
dvtDashboard/dma_prime_vis_toolkit/static/js/: helper.js
dvtDashboard/dma_prime_vis_toolkit/templates/: admin.html  admin_access_user.html  index.html  login.html  reset_password.html  sign_up.html  two_factor_code.html  two_factor_setup.html
dvtDashboard/dma_prime_vis_toolkit/templates/admin/: admin.html  admin_access_user.html
dvtDashboard/dma_prime_vis_toolkit/templates/authentication/: login.html  login_old.html  reset_password.html  sign_up.html  two_factor_auth.html  two_factor_setup.html
dvtDashboard/dma_prime_vis_toolkit/templates/data-approval/: data-approval.html
dvtDashboard/dma_prime_vis_toolkit/templates/email/: reset_pwd_email.html  verify.html
dvtDashboard/mainApp/: __init__.old.py  __init__.py  auth.py  data_handling.py  db.py  definitions.py  schema.sql  test-connect.py  update.cmd  update.ps1  utility.py
dvtDashboard/mainApp/data_processing/: mhc.py
dvtDashboard/mainApp/templates/: base.html  index.html  index_old.html  login.html  main-vis.html  model-exploration.html  testing-vis.html
(+309 files in other folders)
