[project]
name = "dma_prime_vis_toolkit"
version = "1.7.3"
description = "DMA-PRIME April 2025 - 5 dashboards + user creation, encryption + logging"
dependencies = [
    "waitress",
    "flask",
    "flask-bcrypt",
    "flask_mailman",
    "flask_login",
    "flask_sqlalchemy",

    "mysqlclient",

    "pandas",
    "openpyxl",
    "numpy",
    "geojson",
    "glob2",

    "requests",
    "pyjwt",

    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"