[project]
name = "dma_prime_vis_toolkit"
version = "1.7.6"
description = "DMA-PRIME May 2025 - 5 dashboards, user login/roles/creation/2fa, encryption + logging"
dependencies = [
    "waitress",
    "werkzeug",
    "flask",

    "flask_login",
    "flask-bcrypt",
    "pyotp",
    "qrcode[pil]",

    "flask_sqlalchemy",

    "pyjwt",
    
    "pycryptodomex",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"